--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -99,7 +99,11 @@
           {% if entry.type == "article" -%}
             {%- capture entrytype -%}<em>{{entry.journal}}</em>{%- endcapture -%}
           {%- elsif entry.type == "inproceedings" -%}
-            {%- capture entrytype -%}<em>In {{entry.booktitle}}</em> {%- endcapture -%}
+            {%- if entry.specialtrack -%}
+              {%- capture entrytype -%}<em>In {{entry.booktitle}}</em>, {{entry.specialtrack}} {%- endcapture -%}
+            {%- else -%}
+              {%- capture entrytype -%}<em>In {{entry.booktitle}}</em> {%- endcapture -%}
+            {%- endif -%}
           {%- elsif entry.type == "phdthesis" -%}
             {%- capture entrytype -%}PhD thesis, {{entry.school}}{%- endcapture -%}
           {%- else -%}
